<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/back">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:id="@+id/weatherlayout">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Weather - Łódź, PL"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.35" >

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0.35" >

                <ImageView
                    android:id="@+id/iconCoucher"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="0.35"
                    android:src="@drawable/lever" />

                <TextView
                    android:id="@+id/lever"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.35"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iconCoucher"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_weight="0.35"
                    android:src="@drawable/coucher" />

                <TextView
                    android:id="@+id/coucher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.35"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0.35"
                android:background="#50000000">

                <TextView
                    android:id="@+id/textVitesse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:text="@string/vitesse"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/vitesse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:gravity="right"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0.35"
                android:background="#50000000" >

                <TextView
                    android:id="@+id/textHumidite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:text="@string/humidite"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:id="@+id/humidite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:gravity="right"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0.35"
                android:background="#50000000" >

                <TextView
                    android:id="@+id/textVisibilite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:text="@string/visibilite"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:id="@+id/visibilite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:gravity="right"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0.35"
                android:background="#50000000" >

                <TextView
                    android:id="@+id/textBarometre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:text="@string/barometre"
                    android:textSize="15sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp" />

                <TextView
                    android:id="@+id/barometre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:gravity="right"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0.35" >

                <TextView
                    android:id="@+id/textDemain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:text="@string/demain"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="-10dp"
                android:layout_weight="0.35" >

                <ImageView
                    android:id="@+id/iconDemain"
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tempDemain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textTempDemain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="dfpo" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="0.35" >

                <TextView
                    android:id="@+id/miseAJour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:textSize="12sp" />
            </LinearLayout>

</LinearLayout>
</LinearLayout>